tests/NormalTests/paczka1/small_fuzzy/99347732.err
Error in line 4: vC4eE8 A979 64,9
Error in line 6: kiLzoM S413 75,4
Error in line 10: kiLzoM A720 99,1
Error in line 11: WS9mdCNjN A720 15,1
